--- a/project-web/src/app/scheme/scheme-add/scheme-add.component.html
+++ b/project-web/src/app/scheme/scheme-add/scheme-add.component.html
@@ -1,5 +1,5 @@
 <section class="scheme-add">
-  <div class="container">
+  <div class="container scheme-add__wrapper">
     <form [formGroup]="sizeForm" (input)="onInput($event)" class="scheme-add__size">
       <div class="add-restaurant-form__item">
         <label for="width">Ширина</label>
