--- a/project-web/src/app/auth/login/login.component.scss
+++ b/project-web/src/app/auth/login/login.component.scss
@@ -4,16 +4,29 @@
   background: rgba(0, 0, 0, 0.6);
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .login-form {
   text-align: center;
   margin: 0 auto;
   width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
 
   &__item {
     margin: 20px 0;
     line-height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
   }
 
   .button {
