--- a/project-web/src/app/auth/signup/signup.component.scss
+++ b/project-web/src/app/auth/signup/signup.component.scss
@@ -1,18 +1,29 @@
 .signup {
   height: 100%;
   width: 100%;
-  padding: 200px 0px;
   background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .signup-form {
   text-align: center;
   margin: 0 auto;
   width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 
   &__item {
     margin: 20px 0;
     line-height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
   }
 
   .button {
