started business info

--- a/project-web/src/app/business/business-list/business-list.component.html
+++ b/project-web/src/app/business/business-list/business-list.component.html
@@ -13,7 +13,7 @@
               <p>{{restaurant.name}}</p>
             </div>
           </div>
-          <a class="button" href="restaurant-info.html">Подробнее</a>
+          <a class="button" routerLink="/business/{{restaurant.id}}">Подробнее</a>
         </li>
       </ul>
     </div>
