added restauurant reservations info

--- a/project-web/src/app/business/business-info/business-info.component.html
+++ b/project-web/src/app/business/business-info/business-info.component.html
@@ -16,5 +16,6 @@
         </div>
       </div>
     </div>
+    <app-restaurant-reservations [restaurantId]="restaurant.id"></app-restaurant-reservations>
   </div>
 </section>
